public/style.css
body {
    font-size: 1.125rem;
    color: #2b2b2b;
}

h1 {
    border-bottom: solid 2px #86cecb; 
}
h1, h2, h3, h4, h5, h6 {
    margin-bottom: 1rem;
}
h2 {
    font-size: 1.75rem;
    color: black;
}
h3 {
    font-size: 1.355rem;
}

p {
    margin-bottom:1.5em
}

ul {
    margin-bottom: 1.5em;
}

pre {
    padding-left: 0.9em;
    margin-bottom:1.5em;
    border-left: solid 4px #86cecb;
}

.hljs {
    padding: 0;
}

.hidden {
    display: none;
}

.no-style {
    list-style: none;
}

.sidebar {
    border-right: 1px solid #d3d3d3;
    overflow-x: hidden;
}

.sidebar ul {
    margin: 0;
}

#home-link {
    font-weight: bold;
    font-size: 1.8rem;
    text-decoration: underline;
}

.selected {
    font-weight: bold;
    font-size: 1.3rem;
}

.editor-pane {
    width: 100%;
    height: 250px;
    border: solid 1px #373b3e;
}

.editor-controls {
    background-color: #f3f3f3;
    border-left: solid 1px #373b3e;
    border-right: solid 1px #373b3e;
    border-bottom: solid 1px #373b3e;
}

.editor-btn {
    font-size: 1.1em;
    font-family: inherit;
    border: 0;
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 0.5em;
    padding-right: 0.5em;
    background-color: inherit;
    cursor: pointer;
}
.editor-btn > i {
    padding-right: 0.3em;
}
.run-btn  {
    color: rgb(21, 88, 21);
}
.reset-btn {
    color: rgb(56, 66, 155);
}

.output-area {
    width: 100%;
    max-height: 300px;
    resize: none;
    font-size: 17px;
    font-family: 'Courier New', Courier, monospace;
    overflow-y: scroll;
    border-left: 1px solid #d3d3d3;
    border-right: 1px solid #d3d3d3;
    border-bottom: 1px solid #d3d3d3;
}

.output-line {
    display: block;
    padding-left: 10px;
    padding-right: 10px;
}

.output-label {
    font-weight: bold;
}

.output-pass {
    background-color: rgb(237, 247, 231)
}

.output-fail {
    background-color: #faecec;
}

.output-error {
    background-color: #faecec;
}

.indicator {
    margin-right: 0.5em;
    font-size: 1em;
}

.pass-indicator {
    color: green;
}

.fail-indicator {
    color: red;
}

.no-padding {
    padding-right: 0px;
    padding-left: 0px;
}

.notification-table {
    display: table;
}

.notification {
    margin-bottom: 1.5em;
    border: 1px solid #d3d3d3;
    display: table;
    width: 100%;
}

.notification-content {
    display: table-cell;
    font-size: 0.9em;
    padding-top: 0.6em;
    padding-bottom: 0.6em;
    padding-left: 0.8em;
    padding-right: 0.8em;
    vertical-align: middle;
}
.notification-content *:last-child {
    margin-bottom: 0;
}
.notification-content code {
    background-color: inherit;
}

.note {
    background-color: rgb(252, 251, 237);
}
.tip {
    background-color: rgb(232, 247, 252);
}
.warning {
    background-color: rgb(255, 242, 242);
}

.notification-stub {
    display: table-cell;
    padding-left: 0.5em; 
    padding-right: 0.5em;
    width: 2em;
    font-size: 1.2em;
    text-align: center;
    vertical-align: middle;
    color: #303030;
}
.note > .notification-stub {
    background-color: rgb(236, 217, 133);
}
.tip > .notification-stub {
    background-color: rgb(101, 193, 236);
}
.warning > .notification-stub {
    background-color: rgb(236, 124, 124); 
}

.lesson-container {
    margin-left: 0px;
    max-width: 800px;
    margin-bottom: 40px;
}

.nav-btn-row {
    margin-top: 3em;
}
.nav-btn-left {
    display: inline-block;
}
.nav-btn-right {
    float: right;
}

